test/corpus/filters-regex.txt
==================
Regex filter
==================

app:requests
| filter path == #/api\/v1/

---

(source_file
  (query
    (simple_query
      (source
        (metric_id
          (identifier
            (plain_identifier))
          (metric_name
            (identifier
              (plain_identifier)))))
      (filter_rule
        (filter_expr
          (filter_atom
            (identifier
              (plain_identifier))
            (regex_filter
              (cmp_re)
              (regex))))))))
