test/corpus/pipes-sample-align-group.txt
==================
Sample align group
==================

app:requests
| sample 0.5
| align to 1m over 1h using prom::rate
| group by method, status using sum

---

(source_file
  (query
    (simple_query
      (source
        (metric_id
          (identifier
            (plain_identifier))
          (metric_name
            (identifier
              (plain_identifier)))))
      (sample_rule
        (sample_expr
          (number
            (float))))
      (pipe_rule
        (align
          (time_relative_parameterized
            (time_relative))
          (time_relative_parameterized
            (time_relative))
          (func
            (module
              (identifier
                (plain_identifier)))
            (identifier
              (plain_identifier)))))
      (pipe_rule
        (group_by
          (tags
            (identifier
              (plain_identifier))
            (identifier
              (plain_identifier)))
          (func
            (identifier
              (plain_identifier))))))))
