test/corpus/source-basic.txt
==================
Basic metric
==================

app:requests

---

(source_file
  (query
    (simple_query
      (source
        (metric_id
          (identifier
            (plain_identifier))
          (metric_name
            (identifier
              (plain_identifier))))))))
